新增变量与表达式系统（动态字段、公式编辑窗口、变量面板）；轨道表统一与命令轨道闭环；重命名支持中文；界面高度与右对齐统一；修复多处 Math.clamp 参数错位崩溃